# give-me-diet

./: Cargo.toml  example.gmd
crates/gmd-cli/: Cargo.toml
crates/gmd-cli/src/: main.rs
crates/gmd-parser/: Cargo.toml
crates/gmd-parser/src/: lib.rs  models.rs  parser.rs  tests.rs
crates/gmd-parser/src/parser/: keyword.rs
