[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT"
repository = "https://github.com/Niedzwiedzw/give-me-diet"
categories = ["diet", "cli", "sport"]
readme = "README.md"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
# internal
gmd-parser.path = "crates/gmd-parser"
# external
chrono = { version = "0.4.31", features = ["serde"] }
derive_more = "0.99.17"
extension-traits = "1.0.1"
eyre = "0.6.11"
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
nonempty = { version = "0.9.0", features = ["serialize"] }
pretty_assertions = "1.4.0"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
tap = "1.0.1"
toml = "0.8.8"
tracing = "0.1.40"
transpare = { git = "https://github.com/Niedzwiedzw/transpare", version = "0.2.0" }
