[package]
name = "gmd-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "cargo", "env"] }
color-eyre = "0.6.2"
eyre.workspace = true
gmd-parser.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
