[package]
name = "gmd-parser"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
derive_more.workspace = true
extension-traits.workspace = true
eyre.workspace = true
itertools.workspace = true
nom.workspace = true
nom-supreme.workspace = true
nonempty.workspace = true
pretty_assertions.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tap.workspace = true
toml.workspace = true
tracing.workspace = true
transpare.workspace = true
